just done the basic functions for the landing page of google

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -27,7 +27,8 @@
 
             &:hover {
                 text-decoration: underline;
-                color: rgb(121, 121, 115);
+                // color: rgb(121, 121, 115);
+                color: rgb(238, 230, 230);
             }
         }
     }
